--- a/PES1PG21CA165.html
+++ b/PES1PG21CA165.html
@@ -3,7 +3,7 @@
         <title>Registration Form</title>
     </head>
     <body>
-        <center><font size="20px"><font color="blue">PES</font> <font color="red">UNIVERSITY</font></font>
+        <center><p><font size="60px"><font color="blue">PES <font color="red">UNIVERSITY</font></font></font></p>
         <h3>Feet Ring Road,<br>
             BSK III Stage,<br>
             Bangalore-560085</h3>
