--- a/PES1PG21CA133-chethan-2.html
+++ b/PES1PG21CA133-chethan-2.html
@@ -23,7 +23,9 @@
         <h3>INFRASTRUCTURE AT PES</h3>
         <p>We believe that the development of new technologies affords us an unprecedented opportunity to transform the learning experience for our students.<br>
         &nbsp;&nbsp;The creation of supporting infrastructure is the a major element of our core strategy.</p>
-        <h3><center><a href="signup.html">SIGN UP</a>
-        <a href="signin.html">SIGN IN</a></center></h3>
-    </body>
+          <center>
+        <h1><a href="personalDetails.html"><font color="red">CLICK HERE TO REGISTER</font></a></h1>
+
+          </center>
+      </body>
 </html>
